ampliate NdP sez progettazione + altro

--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_1_0_0.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_1_0_0.tex
@@ -1,4 +1,4 @@
-% Norme di progetto
+% Norme di Progetto
 % da compilare con il comando pdflatex Norme_di_progetto_x.x.x.tex
 
 \input{../../util/hx-ambiente}
@@ -46,20 +46,20 @@ Il presente documento si divide in tre sezioni principali:
 \begin{description}
 	\item[sezione \ref{sec:primari}] Regola i due processi primari di:
 	\begin{description}
-		\item[fornitura] descritto in §5.2 in ISO/IEC 12207-1995;
-		\item[sviluppo] descritto in §5.3 in ISO/IEC 12207-1995.
+		\item[fornitura] descritto in §5.2 di ISO/IEC 12207-1995;
+		\item[sviluppo] descritto in §5.3 di ISO/IEC 12207-1995.
 	\end{description}
 	\item[sezione \ref{sec:supporto}] Regola i processi di supporto:
 	\begin{description}
-		\item[documentazione] descritto in §6.1 in ISO/IEC 12207-1995;
-		\item[configurazione] descritto in §6.2 in ISO/IEC 12207-1995;
-		\item[verifica] descritto in §6.4 in ISO/IEC 12207-1995;
-		\item[validazione] descritto in §6.5 in ISO/IEC 12207-1995.
+		\item[documentazione] descritto in §6.1 di ISO/IEC 12207-1995;
+		\item[configurazione] descritto in §6.2 di ISO/IEC 12207-1995;
+		\item[verifica] descritto in §6.4 di ISO/IEC 12207-1995;
+		\item[validazione] descritto in §6.5 di ISO/IEC 12207-1995.
 	\end{description}
 	\item[sezione \ref{sec:organizzativi}] Regola i processi organizzativi:
 	\begin{description}
-		% \item[strumenti] descritto in §7.2 in ISO/IEC 12207-1995;
-		\item[amministrazione] descritto in §7.1 in ISO/IEC 12207-1995.
+		% \item[strumenti] descritto in §7.2 di ISO/IEC 12207-1995;
+		\item[amministrazione] descritto in §7.1 di ISO/IEC 12207-1995.
 	\end{description}
 \end{description}
 
@@ -73,14 +73,14 @@ Il presente documento si divide in tre sezioni principali:
 
 \subsubsection{Riferimenti normativi}
 \begin{itemize}
-	\item ISO/IEC 12207-1995: \url{http://www.math.unipd.it/\~tullio/IS-1/2009/Approfondimenti/ISO_12207-1995.pdf};
-	\item Capitolato d'appalto dell'azienda \ZU: \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6.pdf}. % normativo o informativo?
+	\item ISO/IEC 12207-1995: \url{http://www.math.unipd.it/\~tullio/IS-1/2009/Approfondimenti/ISO_12207-1995.pdf}, visitato in data 08/02/2017;
+	\item Capitolato d'appalto dell'azienda \ZU: \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6.pdf}, visitato in data 08/02/2017. % normativo o informativo?
 \end{itemize}
 
 \subsubsection{Riferimenti informativi}
 \begin{itemize}
-	\item L. Pantieri, \emph{L'arte di scrivere in Latex}: \url{http://www.lorenzopantieri.net/LaTeX_files/ArteLaTeX.pdf};
-	\item SDMetrics User Manual: \url{http://www.sdmetrics.com/manual/index.html};
+	\item L. Pantieri, \emph{L'arte di scrivere in Latex}: \url{www.lorenzopantieri.net/LaTeX_files/ArteLaTeX.pdf}, visitato in data 08/02/2017;
+	\item SDMetrics User Manual: \url{www.sdmetrics.com/manual/index.html}, visitato in data 21/02/2017;
 	\item CodePro Analytix Help Contents.
 \end{itemize}
 
@@ -100,16 +100,16 @@ Il presente documento si divide in tre sezioni principali:
 
 	Lo studio di fattibilità deve presentare l'analisi svolta dai membri del gruppo riguardo ad ogni capitolato. Per ogni capitolato, gli analisti devono inserire le seguenti sezioni:
 	\begin{description}
-		\item[Descrizione] breve presentazione della proposta di capitolato; 
-		\item[Dominio applicativo] analisi dell'ambito applicativo della proposta di capitolato; 
-		\item[Dominio tecnologico] insieme di tecnologie richieste e consigliate per lo sviluppo del progetto;
-		\item[Aspetti negativi e positivi] analisi delle criticità e delle potenzialità del progetto in esame;
-		\item[Valutazione finale] sunto dei principali motivi alla base dell'accettazione o del rigetto del capitolato in esame.
+		\item[descrizione breve] presentazione della proposta di capitolato; 
+		\item[dominio applicativo] analisi dell'ambito applicativo della proposta di capitolato; 
+		\item[dominio tecnologico] insieme di tecnologie richieste e consigliate per lo sviluppo del progetto;
+		\item[aspetti negativi e positivi] analisi delle criticità e delle potenzialità del progetto in esame;
+		\item[valutazione finale] sunto dei principali motivi alla base dell'accettazione o del rigetto del capitolato in esame.
 	\end{description}
 
 \subsection{Sviluppo}
 	\subsubsection{Analisi dei requisiti}
-	Al termine dello studio di fattibilità, è compito degli analisti elencare e analizzare i requisiti del prodotto da sviluppare. Essi devono poi documentare l'analisi nel documento di analisi dei requisiti (\AdR); questo documento contiene i requisiti e i casi d'uso individuati nelle riunioni svolte.
+	Al termine dello studio di fattibilità, è compito degli analisti elencare e analizzare i requisiti del prodotto da sviluppare. Essi devono poi documentare l'analisi nel documento di analisi dei requisiti (\AdR); questo documento contiene i requisiti e i \gloss{casi d'uso} individuati nelle riunioni svolte.
 	Viene elencata nelle sezioni seguenti la struttura obbligatoria di requisiti e casi d'uso.
 		\paragraph{Requisiti} 
 		Dopo aver individuato i requisiti tramite le varie riunioni, è compito degli analisti redarne un elenco con la seguente struttura:
@@ -143,7 +143,7 @@ Il presente documento si divide in tre sezioni principali:
 			\end{itemize}
 		\end{itemize}
 		\paragraph{Casi d'uso}
-		L'analista deve identificare ogni \gloss{caso d'uso} nel modo seguente:
+		L'analista deve identificare ogni caso d'uso nel modo seguente:
 			\[UCx\]
 		dove $x$ è un numero che identifica il caso d'uso. Ogni macro-caso d'uso sarà poi analizzato in modo più specifico e identificato dalla notazione $UCp.f$, dove $p$ indica il caso d'uso stesso e $f$ un suo figlio; ogni figlio può a sua volta avere altri figli. Inoltre ogni caso d'uso deve avere le seguenti proprietà:
 		\begin{description}
@@ -159,10 +159,10 @@ Il presente documento si divide in tre sezioni principali:
 		\end{description}
 
 	\subsubsection{Progettazione}
-	\paragraph{Attività} Il lavoro dei progettisti consiste nel progettare il software; nello specifico, questo lavoro si articola in due attività:
+	\paragraph{Attività progettuali} Il lavoro dei progettisti consiste nel progettare il software; nello specifico, questo lavoro si articola in due attività:
 	\begin{enumerate}
-		\item \textbf{Progettazione architetturale} (attività ISO/IEC 12207 5.3.5) --- definire l'architettura del sistema, cioè individuare e descrivere le componenti del sistema; ogni progettista documenta questa attività nel documento di Specifica Tecnica.
-		\item \textbf{Progettazione di dettaglio} (attività ISO/IEC 12207 5.3.6) --- definire, in dettaglio, il \emph{comportamento} delle componenti del sistema; ogni progettista documenta questa attività nel documento di Definizione di Prodotto.
+		\item \textbf{Progettazione architetturale} (attività descritta in §5.3.5 di ISO/IEC 12207) --- definire l'architettura del sistema, cioè individuare e descrivere le componenti del sistema, esplicitandone i ruoli e le relazioni tra essi; ogni progettista documenta questa attività nel documento di Specifica Tecnica.
+		\item \textbf{Progettazione di dettaglio} (attività descritta in §5.3.6 di ISO/IEC 12207) --- definire, in dettaglio, il \emph{comportamento} delle componenti del sistema; ogni progettista documenta questa attività nel documento di Definizione di Prodotto.
 	\end{enumerate}
 	Per ognuna di queste due attività, ogni progettista deve definire dei test che permettano la verifica del sistema:
 	\begin{enumerate}
@@ -170,7 +170,7 @@ Il presente documento si divide in tre sezioni principali:
 		\item durante la progettazione di dettaglio, la specifica del comportamento di una componente dev'essere accompagnata dalla definizione di un \textbf{test di unità} che verifichi il corretto funzionamento della componente isolata.
 	\end{enumerate}
 
-	\paragraph{Diagrammi} Per descrivere l'architettura e il comportamento del sistema i progettisti utilizzano i diagrammi \gloss{UML} descritti qui di seguito, in riferimento allo standard UML 2.0:
+	\paragraph{Diagrammi} Per descrivere l'architettura e il comportamento del sistema i progettisti utilizzano i diagrammi \gloss{UML} descritti qui di seguito, seguendo lo standard UML 2.0:
 	\begin{itemize}
 		\item Diagramma dei \gloss{package}: raggruppa un numero di elementi UML in una sola unità di livello più alto.
 		\item \gloss{Diagramma delle classi}: descrive le interfacce delle componenti del sistema e le relazioni tra esse.
@@ -178,15 +178,25 @@ Il presente documento si divide in tre sezioni principali:
 		\item Diagramma di sequenza: descrive uno scenario, dove le azioni sono disposte in sequenza e le varie scelte sono già state prese.
 	\end{itemize}
 
-	\paragraph{Stile di progettazione} \proj{} è un software a oggetti; perciò, le componenti software descritte nei diagrammi delle classi sono classi \gloss{Java} e prototipi di oggetti \gloss{JavaScript}. Per comodità, chiameremo “classi” anche i prototipi di oggetti JavaScript, benché tale linguaggio non offra il costrutto \texttt{class} se non come “zucchero sintattico”. Pertanto, le procedure descritte nei diagrammi delle attività sono:
+	\paragraph{Stile di progettazione} L'architettura di \proj{} è segue lo stile dell'\textbf{orientazione agli oggetti}; perciò, le componenti software descritte nei diagrammi delle classi sono:
+	\begin{itemize}
+		\item classi \gloss{Java};
+		\item prototipi di oggetti \gloss{JavaScript}.
+	\end{itemize}
+	Per comodità, chiameremo “classi” anche i prototipi di oggetti JavaScript, benché tale linguaggio non offra il costrutto \texttt{class} (se non come “zucchero sintattico”). Pertanto, le procedure descritte nei diagrammi delle attività sono:
 	\begin{itemize}
 		\item in Java, solo ed esclusivamente metodi di classi;
-		\item in JavaScript, metodi di classi o funzioni che abbiano un nome esplicito.
+		\item in JavaScript, metodi di classi o funzioni che abbiano un nome esplicito (quindi \textbf{non} anonime).
 	\end{itemize}
 	Al fine di aumentare la manutenibilità del sistema, i progettisti devono seguire le seguenti regole:
 	\begin{itemize}
-		\item quando una classe si interfaccia con un'altra, essa non deve specificare una particolare classe concreta ma soltanto una suo \emph{tipo}, cioè un'interfaccia o una classe astratta;
-		\item ...
+		\item ogni libreria esterna dev'essere utilizzata come puro servizio: non è possibile modificarne il codice (questo per problemi di tempo);
+		\item quando una classe si interfaccia con un'altra, essa non deve conoscere una particolare classe concreta ma soltanto un suo \emph{tipo}, cioè un'interfaccia o una classe astratta;
+		\item ogni componente deve avere un compito ben preciso, ricavabile dal proprio nome e dai metodi che costituiscono la propria interfaccia;
+		\item i progettisti devono assumere di conoscere soltanto il tipo statico di un oggetto, non il suo tipo dinamico;
+		\item i progettisti devono definire solo metodi di istanza (quindi non statici);
+		\item se una classe $A$ dipende, per generalizzazione, da una classe $B$, allora dev'essere possibile dire che “ogni $A$ è un $B$”;
+		\item i campi dati di ogni classe Java devono essere privati;
 		\item 
 	\end{itemize}
 
